--- a/FourWheels/Templates/wheels-layout.html
+++ b/FourWheels/Templates/wheels-layout.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../Css/cars-layout-style.css">
-    <title>Cars</title>
+    <link rel="stylesheet" href="../Css/wheels-layout-style.css">
+    <title>Wheels</title>
 </head>
 <body>
     <nav>
@@ -12,16 +12,16 @@
             <a id="logo" class="nav-bar-links" href="../index.html">4Wheels</a>
             <ul class="nav-bar">
                 <li>
-                    <a href="" class="nav-bar-links">Cars</a>
+                    <a href="cars-layout.html" class="nav-bar-links">Cars</a>
                 </li>
                 <li>
                     <a href="accesories-layout.html" class="nav-bar-links">Accesories</a>
                 </li>
                 <li>
-                    <a href="wheels-layout.html" class="nav-bar-links">Wheels</a>
+                    <a href="" class="nav-bar-links">Wheels</a>
                 </li>
                 <li>
-                    <a href="services-layout.html../" class="nav-bar-links">Services</a>
+                    <a href="services-layout.html" class="nav-bar-links">Services</a>
                 </li>
                 <li>
                     <a href="auth-page.html" class="log_in-button">Log in</a>
@@ -31,7 +31,7 @@
     </nav>
     <div id="search-box">
         <form action="">
-            <input type="text" placeholder="Search car">
+            <input type="text" placeholder="Search wheels">
         </form>
         <div id="sort-menu">
             <p>(9)</p>
@@ -46,13 +46,13 @@
             </ul>
         </div>
     </div>
-    <section id="cars-cards">
+    <section id="wheels-cards">
         <aside id="cars-filter">
         
         </aside> 
         <div class="cards-grid">
             <div class="car-card">
-                <a href=""><img src="../Img/car1.jpg" alt="" class="card-img"></a>
+                <a href=""><img src="../Img/wheel.jpg" alt="" class="card-img"></a>
                 <h3 class="card-title">Mercedes GLC 250</h3>
                 <div class="card-details">
                     <p>Year :</p>
@@ -63,7 +63,7 @@
                 <p class="card-price">56.000€</p>
             </div>
             <div class="car-card">
-                <a href=""><img src="../Img/car1.jpg" alt="" class="card-img"></a>
+                <a href=""><img src="../Img/wheel.jpg" alt="" class="card-img"></a>
                 <h3 class="card-title">Mercedes GLC 250</h3>
                 <div class="card-details">
                     <p>Year :</p>
@@ -74,7 +74,7 @@
                 <p class="card-price">56.000€</p>
             </div>
             <div class="car-card">
-                <a href=""><img src="../Img/car1.jpg" alt="" class="card-img"></a>
+                <a href=""><img src="../Img/wheel.jpg" alt="" class="card-img"></a>
                 <h3 class="card-title">Mercedes GLC 250</h3>
                 <div class="card-details">
                     <p>Year :</p>
@@ -85,7 +85,7 @@
                 <p class="card-price">56.000€</p>
             </div>
             <div class="car-card">
-                <a href=""><img src="../Img/car1.jpg" alt="" class="card-img"></a>
+                <a href=""><img src="../Img/wheel.jpg" alt="" class="card-img"></a>
                 <h3 class="card-title">Mercedes GLC 250</h3>
                 <div class="card-details">
                     <p>Year :</p>
@@ -96,7 +96,7 @@
                 <p class="card-price">56.000€</p>
             </div>
             <div class="car-card">
-                <a href=""><img src="../Img/car1.jpg" alt="" class="card-img"></a>
+                <a href=""><img src="../Img/wheel.jpg" alt="" class="card-img"></a>
                 <h3 class="card-title">Mercedes GLC 250</h3>
                 <div class="card-details">
                     <p>Year :</p>
@@ -107,7 +107,7 @@
                 <p class="card-price">56.000€</p>
             </div> 
             <div class="car-card">
-                <a href=""><img src="../Img/car1.jpg" alt="" class="card-img"></a>
+                <a href=""><img src="../Img/wheel.jpg" alt="" class="card-img"></a>
                 <h3 class="card-title">Mercedes GLC 250</h3>
                 <div class="card-details">
                     <p>Year :</p>
@@ -118,7 +118,7 @@
                 <p class="card-price">56.000€</p>
             </div> 
             <div class="car-card">
-                <a href=""><img src="../Img/car1.jpg" alt="" class="card-img"></a>
+                <a href=""><img src="../Img/wheel.jpg" alt="" class="card-img"></a>
                 <h3 class="card-title">Mercedes GLC 250</h3>
                 <div class="card-details">
                     <p>Year :</p>
@@ -129,7 +129,7 @@
                 <p class="card-price">56.000€</p>
             </div> 
             <div class="car-card">
-                <a href=""><img src="../Img/car1.jpg" alt="" class="card-img"></a>
+                <a href=""><img src="../Img/wheel.jpg" alt="" class="card-img"></a>
                 <h3 class="card-title">Mercedes GLC 250</h3>
                 <div class="card-details">
                     <p>Year :</p>
@@ -140,7 +140,7 @@
                 <p class="card-price">56.000€</p>
             </div> 
             <div class="car-card">
-                <a href=""><img src="../Img/car1.jpg" alt="" class="card-img"></a>
+                <a href=""><img src="../Img/wheel.jpg" alt="" class="card-img"></a>
                 <h3 class="card-title">Mercedes GLC 250</h3>
                 <div class="card-details">
                     <p>Year :</p>
@@ -151,7 +151,7 @@
                 <p class="card-price">56.000€</p>
             </div> 
             <div class="car-card">
-                <a href=""><img src="../Img/car1.jpg" alt="" class="card-img"></a>
+                <a href=""><img src="../Img/wheel.jpg" alt="" class="card-img"></a>
                 <h3 class="card-title">Mercedes GLC 250</h3>
                 <div class="card-details">
                     <p>Year :</p>
