--- a/FourWheels/Css/style.css
+++ b/FourWheels/Css/style.css
@@ -20,13 +20,15 @@ nav {
     position: fixed;
     top: 0;
     width: 100%;
+    z-index: 10;
 }
 
 #nav-wrap {
-    height: 45px;
+    height: 50px;
     display: flex;
     align-items: baseline;
     justify-content: space-between;
+    transition: 0.5s ease-in;
 }
 
 .nav-bar-links {
@@ -36,6 +38,7 @@ nav {
 #logo {
     font-size: 27px;
     margin-left: 100px;
+    margin-top: 5px;
     position: relative;
 }
 
@@ -83,7 +86,7 @@ section {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 75px;
+    margin-top: 100px;
 }
 
 /* Top offer section */
@@ -94,7 +97,7 @@ section {
 }
 
 .top-offer-cards {
-    margin-top: 50px;
+    margin-top: 100px;
     width: 90%;
     display: flex;
     justify-content: space-between;
@@ -178,6 +181,7 @@ section {
 /* Parteners */
 
 #parteners-wrap {
+    margin-top: 50px;
     width: 800px;
     display: grid;
     grid-template-columns: 200px 200px 200px 200px;
@@ -190,7 +194,7 @@ section {
 /* Contact us */
 
 footer {
-    margin-top: 50px;
+    margin-top: 100px;
     height: 300px;
     background-color: black;
     display: flex;
