changed css tructure

--- a/FourWheels/Templates/accesories-page.html
+++ b/FourWheels/Templates/accesories-page.html
@@ -3,7 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../Css/accesories-layout.css">
+    <link rel="stylesheet" href="../Css/layout.css">
+    <link rel="stylesheet" href="../Css/accesories-card.css">
+    <link rel="stylesheet" href="../Css/search-sort-bar.css">
+    <link rel="stylesheet" href="../Css/accesories-page.css">
     <title>Accesories</title>
 </head>
 <body>
@@ -12,16 +15,16 @@
             <a id="logo" class="nav-bar-links" href="../index.html">4Wheels</a>
             <ul class="nav-bar">
                 <li>
-                    <a href="cars-layout.html" class="nav-bar-links">Cars</a>
+                    <a href="cars-page.html" class="nav-bar-links">Cars</a>
                 </li>
                 <li>
                     <a href="" class="nav-bar-links">Accesories</a>
                 </li>
                 <li>
-                    <a href="wheels-layout.html" class="nav-bar-links">Wheels</a>
+                    <a href="wheels-page.html" class="nav-bar-links">Wheels</a>
                 </li>
                 <li>
-                    <a href="services-layout.html" class="nav-bar-links">Services</a>
+                    <a href="services-page.html" class="nav-bar-links">Services</a>
                 </li>
                 <li>
                     <a href="auth-page.html" class="log_in-button">Log in</a>
