--- a/FourWheels/Templates/cars-page.html
+++ b/FourWheels/Templates/cars-page.html
@@ -3,7 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../Css/cars-layout-style.css">
+    <link rel="stylesheet" href="../Css/layout.css">
+    <link rel="stylesheet" href="../Css/car-cards.css">
+    <link rel="stylesheet" href="../Css/search-sort-bar.css">
+    <link rel="stylesheet" href="../Css/cars-page.css">
     <title>Cars</title>
 </head>
 <body>
@@ -15,13 +18,13 @@
                     <a href="" class="nav-bar-links">Cars</a>
                 </li>
                 <li>
-                    <a href="accesories-layout.html" class="nav-bar-links">Accesories</a>
+                    <a href="accesories-page.html" class="nav-bar-links">Accesories</a>
                 </li>
                 <li>
-                    <a href="wheels-layout.html" class="nav-bar-links">Wheels</a>
+                    <a href="wheels-page.html" class="nav-bar-links">Wheels</a>
                 </li>
                 <li>
-                    <a href="services-layout.html../" class="nav-bar-links">Services</a>
+                    <a href="services-page.html" class="nav-bar-links">Services</a>
                 </li>
                 <li>
                     <a href="auth-page.html" class="log_in-button">Log in</a>
