--- a/FourWheels/Templates/services-page.html
+++ b/FourWheels/Templates/services-page.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../Css/services-layout-style.css">
+    <link rel="stylesheet" href="../Css/layout.css">
+    <link rel="stylesheet" href="../Css/services-page.css">
     <title>Wheels</title>
 </head>
 <body>
@@ -12,13 +13,13 @@
             <a id="logo" class="nav-bar-links" href="../index.html">4Wheels</a>
             <ul class="nav-bar">
                 <li>
-                    <a href="cars-layout.html" class="nav-bar-links">Cars</a>
+                    <a href="cars-page.html" class="nav-bar-links">Cars</a>
                 </li>
                 <li>
-                    <a href="accesories-layout.html" class="nav-bar-links">Accesories</a>
+                    <a href="accesories-page.html" class="nav-bar-links">Accesories</a>
                 </li>
                 <li>
-                    <a href="wheels-layout.html" class="nav-bar-links">Wheels</a>
+                    <a href="wheels-page.html" class="nav-bar-links">Wheels</a>
                 </li>
                 <li>
                     <a href="" class="nav-bar-links">Services</a>
