--- a/FourWheels/Templates/wheels-page.html
+++ b/FourWheels/Templates/wheels-page.html
@@ -3,7 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../Css/wheels-layout-style.css">
+    <link rel="stylesheet" href="../Css/layout.css">
+    <link rel="stylesheet" href="../Css/search-sort-bar.css">
+    <link rel="stylesheet" href="../Css/wheels-card.css">
+    <link rel="stylesheet" href="../Css/wheels-page.css">
     <title>Wheels</title>
 </head>
 <body>
@@ -12,16 +15,16 @@
             <a id="logo" class="nav-bar-links" href="../index.html">4Wheels</a>
             <ul class="nav-bar">
                 <li>
-                    <a href="cars-layout.html" class="nav-bar-links">Cars</a>
+                    <a href="cars-page.html" class="nav-bar-links">Cars</a>
                 </li>
                 <li>
-                    <a href="accesories-layout.html" class="nav-bar-links">Accesories</a>
+                    <a href="accesories-page.html" class="nav-bar-links">Accesories</a>
                 </li>
                 <li>
                     <a href="" class="nav-bar-links">Wheels</a>
                 </li>
                 <li>
-                    <a href="services-layout.html" class="nav-bar-links">Services</a>
+                    <a href="services-page.html" class="nav-bar-links">Services</a>
                 </li>
                 <li>
                     <a href="auth-page.html" class="log_in-button">Log in</a>
@@ -51,115 +54,115 @@
         
         </aside> 
         <div class="cards-grid">
-            <div class="car-card">
+            <div class="wheel-card">
                 <a href=""><img src="../Img/wheel.jpg" alt="" class="card-img"></a>
-                <h3 class="card-title">Mercedes GLC 250</h3>
+                <h3 class="card-title">Porche</h3>
                 <div class="card-details">
-                    <p>Year :</p>
-                    <p>Power :</p>
-                    <p>Fuel :</p>
-                    <p>Transmission: </p>
+                    <p>Diametru :</p>
+                    <p>Sezon :</p>
+                    <p>Material :</p>
+                    <p>Stare: </p>
                 </div>
-                <p class="card-price">56.000€</p>
+                <p class="card-price">170€</p>
             </div>
-            <div class="car-card">
+            <div class="wheel-card">
                 <a href=""><img src="../Img/wheel.jpg" alt="" class="card-img"></a>
-                <h3 class="card-title">Mercedes GLC 250</h3>
+                <h3 class="card-title">Porche</h3>
                 <div class="card-details">
-                    <p>Year :</p>
-                    <p>Power :</p>
-                    <p>Fuel :</p>
-                    <p>Transmission: </p>
+                    <p>Diametru :</p>
+                    <p>Sezon :</p>
+                    <p>Material :</p>
+                    <p>Stare: </p>
                 </div>
-                <p class="card-price">56.000€</p>
+                <p class="card-price">170€</p>
             </div>
-            <div class="car-card">
+            <div class="wheel-card">
                 <a href=""><img src="../Img/wheel.jpg" alt="" class="card-img"></a>
-                <h3 class="card-title">Mercedes GLC 250</h3>
+                <h3 class="card-title">Porche</h3>
                 <div class="card-details">
-                    <p>Year :</p>
-                    <p>Power :</p>
-                    <p>Fuel :</p>
-                    <p>Transmission: </p>
+                    <p>Diametru :</p>
+                    <p>Sezon :</p>
+                    <p>Material :</p>
+                    <p>Stare: </p>
                 </div>
-                <p class="card-price">56.000€</p>
+                <p class="card-price">170€</p>
             </div>
-            <div class="car-card">
+            <div class="wheel-card">
                 <a href=""><img src="../Img/wheel.jpg" alt="" class="card-img"></a>
-                <h3 class="card-title">Mercedes GLC 250</h3>
+                <h3 class="card-title">Porche</h3>
                 <div class="card-details">
-                    <p>Year :</p>
-                    <p>Power :</p>
-                    <p>Fuel :</p>
-                    <p>Transmission: </p>
+                    <p>Diametru :</p>
+                    <p>Sezon :</p>
+                    <p>Material :</p>
+                    <p>Stare: </p>
                 </div>
-                <p class="card-price">56.000€</p>
+                <p class="card-price">170€</p>
             </div>
-            <div class="car-card">
+            <div class="wheel-card">
                 <a href=""><img src="../Img/wheel.jpg" alt="" class="card-img"></a>
-                <h3 class="card-title">Mercedes GLC 250</h3>
+                <h3 class="card-title">Porche</h3>
                 <div class="card-details">
-                    <p>Year :</p>
-                    <p>Power :</p>
-                    <p>Fuel :</p>
-                    <p>Transmission: </p>
+                    <p>Diametru :</p>
+                    <p>Sezon :</p>
+                    <p>Material :</p>
+                    <p>Stare: </p>
                 </div>
-                <p class="card-price">56.000€</p>
+                <p class="card-price">170€</p>
             </div> 
-            <div class="car-card">
+            <div class="wheel-card">
                 <a href=""><img src="../Img/wheel.jpg" alt="" class="card-img"></a>
-                <h3 class="card-title">Mercedes GLC 250</h3>
+                <h3 class="card-title">Porche</h3>
                 <div class="card-details">
-                    <p>Year :</p>
-                    <p>Power :</p>
-                    <p>Fuel :</p>
-                    <p>Transmission: </p>
+                    <p>Diametru :</p>
+                    <p>Sezon :</p>
+                    <p>Material :</p>
+                    <p>Stare: </p>
                 </div>
-                <p class="card-price">56.000€</p>
+                <p class="card-price">170€</p>
             </div> 
-            <div class="car-card">
+            <div class="wheel-card">
                 <a href=""><img src="../Img/wheel.jpg" alt="" class="card-img"></a>
-                <h3 class="card-title">Mercedes GLC 250</h3>
+                <h3 class="card-title">Porche</h3>
                 <div class="card-details">
-                    <p>Year :</p>
-                    <p>Power :</p>
-                    <p>Fuel :</p>
-                    <p>Transmission: </p>
+                    <p>Diametru :</p>
+                    <p>Sezon :</p>
+                    <p>Material :</p>
+                    <p>Stare: </p>
                 </div>
-                <p class="card-price">56.000€</p>
+                <p class="card-price">170€</p>
             </div> 
-            <div class="car-card">
+            <div class="wheel-card">
                 <a href=""><img src="../Img/wheel.jpg" alt="" class="card-img"></a>
-                <h3 class="card-title">Mercedes GLC 250</h3>
+                <h3 class="card-title">Porche</h3>
                 <div class="card-details">
-                    <p>Year :</p>
-                    <p>Power :</p>
-                    <p>Fuel :</p>
-                    <p>Transmission: </p>
+                    <p>Diametru :</p>
+                    <p>Sezon :</p>
+                    <p>Material :</p>
+                    <p>Stare: </p>
                 </div>
-                <p class="card-price">56.000€</p>
+                <p class="card-price">170€</p>
             </div> 
-            <div class="car-card">
+            <div class="wheel-card">
                 <a href=""><img src="../Img/wheel.jpg" alt="" class="card-img"></a>
-                <h3 class="card-title">Mercedes GLC 250</h3>
+                <h3 class="card-title">Porche</h3>
                 <div class="card-details">
-                    <p>Year :</p>
-                    <p>Power :</p>
-                    <p>Fuel :</p>
-                    <p>Transmission: </p>
+                    <p>Diametru :</p>
+                    <p>Sezon :</p>
+                    <p>Material :</p>
+                    <p>Stare: </p>
                 </div>
-                <p class="card-price">56.000€</p>
+                <p class="card-price">170€</p>
             </div> 
-            <div class="car-card">
+            <div class="wheel-card">
                 <a href=""><img src="../Img/wheel.jpg" alt="" class="card-img"></a>
-                <h3 class="card-title">Mercedes GLC 250</h3>
+                <h3 class="card-title">Porche</h3>
                 <div class="card-details">
-                    <p>Year :</p>
-                    <p>Power :</p>
-                    <p>Fuel :</p>
-                    <p>Transmission: </p>
+                    <p>Diametru :</p>
+                    <p>Sezon :</p>
+                    <p>Material :</p>
+                    <p>Stare: </p>
                 </div>
-                <p class="card-price">56.000€</p>
+                <p class="card-price">170€</p>
             </div>     
         </div>
     </section>
