--- a/FourWheels/Css/layout.css
+++ b/FourWheels/Css/layout.css
@@ -12,9 +12,10 @@
 
 body {
     background-color: #3a404a;
-    height: 2000px;
     height: max-content;
 }
+
+/*navbar*/
 
 nav {
     position: fixed;
@@ -81,117 +82,7 @@ nav {
     transition: 0.5s;
 }
 
-section {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-top: 100px;
-}
-
-/* Top offer section */
-
-#top-offers-section {
-    margin-top: 120px;
-
-}
-
-.top-offer-cards {
-    margin-top: 100px;
-    width: 90%;
-    display: flex;
-    justify-content: space-between;
-}
-
-.section-title {
-    font-size: 30px;
-    position: relative;
-}
-
-.car-card {
-    width: 250px;
-    height: 350px;
-    background-color: #e3e3e3;
-    overflow-x: hidden;
-}
-
-.card-details {
-    margin-top: 15px;
-    line-height: 20px;
-    margin-left: 5px;
-}
-
-.card-details p {
-    color: black;
-    font-size: 14px;
-    font-weight: bold;
-}
-
-.card-price {
-    color: black;
-    margin-top: 15px;
-    margin-right: 10px;
-    text-align: right;
-    font-size: 24px;
-    font-weight: bold;
-}
-
-.card-img {
-    width: 100%;
-    height: 170px;
-    object-fit: cover;
-}
-
-.card-title {
-    color: black;
-    font-size: 20px;
-    margin-left: 10px;
-}
-
-.section-title:after {
-    content: "";
-    display: block;
-    width: 35vw;
-    height: 1px;
-    background-color: white;
-    position: absolute;
-    top: 50%;
-    left: 110%;
-}
-
-.section-title:before {
-    content: "";
-    display: block;
-    width: 35vw;
-    height: 1px;
-    background-color: white;
-    position: absolute;
-    top: 50%;
-    right: 110%;
-}
-
-/* Accessories */
-
-.accessories-card {
-    width: 250px;
-    height: 250px;
-    background-color: #e3e3e3;
-}
-
-/* Parteners */
-
-#parteners-wrap {
-    margin-top: 50px;
-    width: 800px;
-    display: grid;
-    grid-template-columns: 200px 200px 200px 200px;
-}
-
-.parteners-logo {
-    width: 150px;
-}
-
-/* Contact us */
+/* footer */
 
 footer {
     margin-top: 100px;
