--- a/FourWheels/Css/search-sort-bar.css
+++ b/FourWheels/Css/search-sort-bar.css
@@ -1,9 +1,4 @@
-@import "style.css";
-
-body {
-    height: 100%;
-}
-
+/* search box */
 #search-box {
     margin-top: 75px;
     display: flex;
@@ -22,30 +17,7 @@ body {
     color: black;
     font-size: 20px;
 }
-
-#cars-filter {
-    margin-left: 50px;
-    background-color: #272b33;
-    height: 78vh;
-    width: 200px;
-}
-
-#cars-cards {
-    display: flex;
-    flex-direction: row;
-    align-items: flex-start;
-    justify-content: space-between;
-}
-
-.cards-grid {
-    display: grid;
-    grid-template-columns: 300px 300px 300px;
-}
-
-.car-card {
-    margin-bottom: 50px;
-}
-
+/* sort-menu */
 #sort-menu {
     display: flex;
     width: 150px;
