--- a/FourWheels/Css/services-page.css
+++ b/FourWheels/Css/services-page.css
@@ -1,10 +1,11 @@
-@import "cars-layout-style.css";
+
 
 #services * {
     color: black;
 }
 
 #services {
+    margin-top: 100px;
     width: 60%;
     margin-left: 50%;
     transform: translateX(-50%);
