--- a/FourWheels/Templates/accesories-page.html
+++ b/FourWheels/Templates/accesories-page.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../Css/layout.css">
-    <link rel="stylesheet" href="../Css/accesories-card.css">
-    <link rel="stylesheet" href="../Css/search-sort-bar.css">
-    <link rel="stylesheet" href="../Css/accesories-page.css">
+    <link rel="stylesheet" href="../Css/components/cards/accesories-card.css">
+    <link rel="stylesheet" href="../Css/components/search-sort-bar.css">
+    <link rel="stylesheet" href="../Css/pages/accesories-page.css">
     <title>Accesories</title>
 </head>
 <body>
@@ -55,62 +55,62 @@
         </aside> 
         <div class="cards-grid">
             <div class="accessories-card">
-                <a href=""><img src="../Img/car-accessories-vacuum.jpg" alt="" class="card-img"></a>
+                <a href=""><img src="../Img/accesories/car-accessories-vacuum.jpg" alt="" class="card-img"></a>
                 <h3 class="card-title">Vacuum cleaner</h3>
                 <p class="card-price">75€</p>
             </div>
             <div class="accessories-card">
-                <a href=""><img src="../Img/car-accessories-vacuum.jpg" alt="" class="card-img"></a>
+                <a href=""><img src="../Img/accesories/car-accessories-vacuum.jpg" alt="" class="card-img"></a>
                 <h3 class="card-title">Vacuum cleaner</h3>
                 <p class="card-price">75€</p>
             </div>
             <div class="accessories-card">
-                <a href=""><img src="../Img/car-accessories-vacuum.jpg" alt="" class="card-img"></a>
+                <a href=""><img src="../Img/accesories/car-accessories-vacuum.jpg" alt="" class="card-img"></a>
                 <h3 class="card-title">Vacuum cleaner</h3>
                 <p class="card-price">75€</p>
             </div>
             <div class="accessories-card">
-                <a href=""><img src="../Img/car-accessories-vacuum.jpg" alt="" class="card-img"></a>
+                <a href=""><img src="../Img/accesories/car-accessories-vacuum.jpg" alt="" class="card-img"></a>
                 <h3 class="card-title">Vacuum cleaner</h3>
                 <p class="card-price">75€</p>
             </div>
             <div class="accessories-card">
-                <a href=""><img src="../Img/car-accessories-vacuum.jpg" alt="" class="card-img"></a>
+                <a href=""><img src="../Img/accesories/car-accessories-vacuum.jpg" alt="" class="card-img"></a>
                 <h3 class="card-title">Vacuum cleaner</h3>
                 <p class="card-price">75€</p>
             </div>
             <div class="accessories-card">
-                <a href=""><img src="../Img/car-accessories-vacuum.jpg" alt="" class="card-img"></a>
+                <a href=""><img src="../Img/accesories/car-accessories-vacuum.jpg" alt="" class="card-img"></a>
                 <h3 class="card-title">Vacuum cleaner</h3>
                 <p class="card-price">75€</p>
             </div>
             <div class="accessories-card">
-                <a href=""><img src="../Img/car-accessories-vacuum.jpg" alt="" class="card-img"></a>
+                <a href=""><img src="../Img/accesories/car-accessories-vacuum.jpg" alt="" class="card-img"></a>
                 <h3 class="card-title">Vacuum cleaner</h3>
                 <p class="card-price">75€</p>
             </div>
             <div class="accessories-card">
-                <a href=""><img src="../Img/car-accessories-vacuum.jpg" alt="" class="card-img"></a>
+                <a href=""><img src="../Img/accesories/car-accessories-vacuum.jpg" alt="" class="card-img"></a>
                 <h3 class="card-title">Vacuum cleaner</h3>
                 <p class="card-price">75€</p>
             </div>
             <div class="accessories-card">
-                <a href=""><img src="../Img/car-accessories-vacuum.jpg" alt="" class="card-img"></a>
+                <a href=""><img src="../Img/accesories/car-accessories-vacuum.jpg" alt="" class="card-img"></a>
                 <h3 class="card-title">Vacuum cleaner</h3>
                 <p class="card-price">75€</p>
             </div>
             <div class="accessories-card">
-                <a href=""><img src="../Img/car-accessories-vacuum.jpg" alt="" class="card-img"></a>
+                <a href=""><img src="../Img/accesories/car-accessories-vacuum.jpg" alt="" class="card-img"></a>
                 <h3 class="card-title">Vacuum cleaner</h3>
                 <p class="card-price">75€</p>
             </div>
             <div class="accessories-card">
-                <a href=""><img src="../Img/car-accessories-vacuum.jpg" alt="" class="card-img"></a>
+                <a href=""><img src="../Img/accesories/car-accessories-vacuum.jpg" alt="" class="card-img"></a>
                 <h3 class="card-title">Vacuum cleaner</h3>
                 <p class="card-price">75€</p>
             </div>
             <div class="accessories-card">
-                <a href=""><img src="../Img/car-accessories-vacuum.jpg" alt="" class="card-img"></a>
+                <a href=""><img src="../Img/accesories/car-accessories-vacuum.jpg" alt="" class="card-img"></a>
                 <h3 class="card-title">Vacuum cleaner</h3>
                 <p class="card-price">75€</p>
             </div>     
@@ -125,7 +125,7 @@
             <li id="telegram-link"><a href="">telegram.com/4Wheels</a></li>
             <li id="office-adress"><a href="">Str. 27 august 32/1</a></li>
         </ul>
-        <img src="/Img/address-map.png" alt="map">
+        <img src="../Img/footer/address-map.png" alt="map">
     </footer>
 
     <script src="../Scripts/script.js"></script>
