--- a/FourWheels/Templates/cars-page.html
+++ b/FourWheels/Templates/cars-page.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../Css/layout.css">
-    <link rel="stylesheet" href="../Css/car-cards.css">
-    <link rel="stylesheet" href="../Css/search-sort-bar.css">
-    <link rel="stylesheet" href="../Css/cars-page.css">
+    <link rel="stylesheet" href="../Css/components/cards/car-cards.css">
+    <link rel="stylesheet" href="../Css/components/search-sort-bar.css">
+    <link rel="stylesheet" href="../Css/pages/cars-page.css">
     <title>Cars</title>
 </head>
 <body>
@@ -55,7 +55,7 @@
         </aside> 
         <div class="cards-grid">
             <div class="car-card">
-                <a href=""><img src="../Img/car1.jpg" alt="" class="card-img"></a>
+                <a href=""><img src="../Img/cars/car1.jpg" alt="" class="card-img"></a>
                 <h3 class="card-title">Mercedes GLC 250</h3>
                 <div class="card-details">
                     <p>Year :</p>
@@ -66,7 +66,7 @@
                 <p class="card-price">56.000€</p>
             </div>
             <div class="car-card">
-                <a href=""><img src="../Img/car1.jpg" alt="" class="card-img"></a>
+                <a href=""><img src="../Img/cars/car1.jpg" alt="" class="card-img"></a>
                 <h3 class="card-title">Mercedes GLC 250</h3>
                 <div class="card-details">
                     <p>Year :</p>
@@ -77,7 +77,7 @@
                 <p class="card-price">56.000€</p>
             </div>
             <div class="car-card">
-                <a href=""><img src="../Img/car1.jpg" alt="" class="card-img"></a>
+                <a href=""><img src="../Img/cars/car1.jpg" alt="" class="card-img"></a>
                 <h3 class="card-title">Mercedes GLC 250</h3>
                 <div class="card-details">
                     <p>Year :</p>
@@ -88,7 +88,7 @@
                 <p class="card-price">56.000€</p>
             </div>
             <div class="car-card">
-                <a href=""><img src="../Img/car1.jpg" alt="" class="card-img"></a>
+                <a href=""><img src="../Img/cars/car1.jpg" alt="" class="card-img"></a>
                 <h3 class="card-title">Mercedes GLC 250</h3>
                 <div class="card-details">
                     <p>Year :</p>
@@ -99,7 +99,7 @@
                 <p class="card-price">56.000€</p>
             </div>
             <div class="car-card">
-                <a href=""><img src="../Img/car1.jpg" alt="" class="card-img"></a>
+                <a href=""><img src="../Img/cars/car1.jpg" alt="" class="card-img"></a>
                 <h3 class="card-title">Mercedes GLC 250</h3>
                 <div class="card-details">
                     <p>Year :</p>
@@ -110,7 +110,7 @@
                 <p class="card-price">56.000€</p>
             </div> 
             <div class="car-card">
-                <a href=""><img src="../Img/car1.jpg" alt="" class="card-img"></a>
+                <a href=""><img src="../Img/cars/car1.jpg" alt="" class="card-img"></a>
                 <h3 class="card-title">Mercedes GLC 250</h3>
                 <div class="card-details">
                     <p>Year :</p>
@@ -121,7 +121,7 @@
                 <p class="card-price">56.000€</p>
             </div> 
             <div class="car-card">
-                <a href=""><img src="../Img/car1.jpg" alt="" class="card-img"></a>
+                <a href=""><img src="../Img/cars/car1.jpg" alt="" class="card-img"></a>
                 <h3 class="card-title">Mercedes GLC 250</h3>
                 <div class="card-details">
                     <p>Year :</p>
@@ -132,7 +132,7 @@
                 <p class="card-price">56.000€</p>
             </div> 
             <div class="car-card">
-                <a href=""><img src="../Img/car1.jpg" alt="" class="card-img"></a>
+                <a href=""><img src="../Img/cars/car1.jpg" alt="" class="card-img"></a>
                 <h3 class="card-title">Mercedes GLC 250</h3>
                 <div class="card-details">
                     <p>Year :</p>
@@ -143,7 +143,7 @@
                 <p class="card-price">56.000€</p>
             </div> 
             <div class="car-card">
-                <a href=""><img src="../Img/car1.jpg" alt="" class="card-img"></a>
+                <a href=""><img src="../Img/cars/car1.jpg" alt="" class="card-img"></a>
                 <h3 class="card-title">Mercedes GLC 250</h3>
                 <div class="card-details">
                     <p>Year :</p>
@@ -154,7 +154,7 @@
                 <p class="card-price">56.000€</p>
             </div> 
             <div class="car-card">
-                <a href=""><img src="../Img/car1.jpg" alt="" class="card-img"></a>
+                <a href=""><img src="../Img/cars/car1.jpg" alt="" class="card-img"></a>
                 <h3 class="card-title">Mercedes GLC 250</h3>
                 <div class="card-details">
                     <p>Year :</p>
@@ -175,7 +175,7 @@
             <li id="telegram-link"><a href="">telegram.com/4Wheels</a></li>
             <li id="office-adress"><a href="">Str. 27 august 32/1</a></li>
         </ul>
-        <img src="/Img/address-map.png" alt="map">
+        <img src="../Img/footer/address-map.png" alt="map">
     </footer>
 
     <script src="../Scripts/script.js"></script>
