--- a/FourWheels/Templates/services-page.html
+++ b/FourWheels/Templates/services-page.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../Css/layout.css">
-    <link rel="stylesheet" href="../Css/services-page.css">
+    <link rel="stylesheet" href="../Css/pages/services-page.css">
     <title>Wheels</title>
 </head>
 <body>
@@ -41,7 +41,7 @@
                         pariatur amet dolores eaque laudantium. Sunt recusandae rem aspernatur 
                         delectus voluptatem. Iusto saepe quam ullam fugit quia tempore dolorem sunt 
                     </p>
-                    <img src="../Img/service.jpg" alt="">
+                    <img src="../Img/services/service.jpg" alt="">
                 </div>
             </li>
             <li>
@@ -52,7 +52,7 @@
                         pariatur amet dolores eaque laudantium. Sunt recusandae rem aspernatur 
                         delectus voluptatem. Iusto saepe quam ullam fugit quia tempore dolorem sunt 
                     </p>
-                    <img src="../Img/service.jpg" alt="">
+                    <img src="../Img/services/service.jpg" alt="">
                 </div>
             </li>
             <li>
@@ -63,7 +63,7 @@
                         pariatur amet dolores eaque laudantium. Sunt recusandae rem aspernatur 
                         delectus voluptatem. Iusto saepe quam ullam fugit quia tempore dolorem sunt 
                     </p>
-                    <img src="../Img/service.jpg" alt="">
+                    <img src="../Img/services/service.jpg" alt="">
                 </div>
             </li>
             <li>
@@ -74,7 +74,7 @@
                         pariatur amet dolores eaque laudantium. Sunt recusandae rem aspernatur 
                         delectus voluptatem. Iusto saepe quam ullam fugit quia tempore dolorem sunt 
                     </p>
-                    <img src="../Img/service.jpg" alt="">
+                    <img src="../Img/services/service.jpg" alt="">
                 </div>
             </li>
             <li>
@@ -85,7 +85,7 @@
                         pariatur amet dolores eaque laudantium. Sunt recusandae rem aspernatur 
                         delectus voluptatem. Iusto saepe quam ullam fugit quia tempore dolorem sunt 
                     </p>
-                    <img src="../Img/service.jpg" alt="">
+                    <img src="../Img/services/service.jpg" alt="">
                 </div>
             </li>
         </ul>
@@ -100,7 +100,7 @@
             <li id="telegram-link"><a href="">telegram.com/4Wheels</a></li>
             <li id="office-adress"><a href="">Str. 27 august 32/1</a></li>
         </ul>
-        <img src="/Img/address-map.png" alt="map">
+        <img src="../Img/footer/address-map.png" alt="map">
     </footer>
 
     <script src="../Scripts/script.js"></script>
