--- a/FourWheels/Templates/cars-page.html
+++ b/FourWheels/Templates/cars-page.html
@@ -39,13 +39,13 @@
         <div id="sort-menu">
             <p>(9)</p>
             <p>Sort by :</p>
-            <ul>
-                <li>price ascendent</li>
-                <li>price descendent</li>
-                <li>date ascendent</li>
-                <li>date descendent</li>
-                <li>name descendent</li>
-                <li>name ascendent</li>
+            <ul id="sort-options">
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
             </ul>
         </div>
     </div>
@@ -179,5 +179,6 @@
     </footer>
 
     <script src="../Scripts/script.js"></script>
+    <script src="../Scripts/sort-menu.js"></script>
 </body>
 </html>
